Add R CMD Check workflow

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,7 @@ library(Cairo)
 # tunevt
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/jackmwolf/tunevt/workflows/R-CMD-check/badge.svg)](https://github.com/jackmwolf/tunevt/actions)
 <!-- badges: end -->
 
 The goal of `tunevt` is to implement methods to fit Virtual Twins models (Foster 
