Update README - Add Clinical Trials (2022+) to references

--- a/README.Rmd
+++ b/README.Rmd
@@ -80,8 +80,8 @@ The fit Step 2 model can be accessed via
 vtmod$vtmod
 ```
 
-(_We note that the true data generating mechanism_ ($Y_i = h(X_i) + T_i g(X_i)$) _included an interaction between the treatment and whether_ $V_1$ _was above its true mean [sample mean `r round(mean(tehtuner_example$V1), 2)`] with_ $g(X_i) = c + 4I(V_{1i}>\mu_1)+4V_{9i}$. 
-_So, the procedure did not make a Type I error!_)
+(We note that the true data generating mechanism ($Y_i = h(X_i) + T_i g(X_i)$) included an interaction between the treatment and whether $V_1$ was above its true mean [sample mean `r round(mean(tehtuner_example$V1), 2)`] with $g(X_i) = c + 4I(V_{1i}>\mu_1)+4V_{9i}$. 
+So, the procedure did not make a Type I error!)
 
 We can also look at the null distribution of the MNPP (through `vtmod$theta_null`) and compare `vtmod$mnpp`  $=\widehat\theta$, the MNPP of our data, to  $\theta_\alpha$, the $1-\alpha$ percentile of the null distribution.
 Since $\widehat\theta > \theta_\alpha$ we ended up with a Step 2 model that included at least one covariate.
@@ -126,3 +126,5 @@ ggplot(data = NULL, aes(x = vtmod$theta_null)) +
 ## References
 
 - Foster, J. C., Taylor, J. M., & Ruberg, S. J. (2011). Subgroup identification from randomized clinical trial data. _Statistics in Medicine, 30_(24), 2867–2880. https://doi.org/10.1002/sim.4322
+
+- Wolf, J. M., Koopmeiners, J. S., & Vock, D. M. (2022+). A permutation procedure to detect heterogeneous treatments effects in randomized clinical trials while controlling the type-I error rate. _Clinical Trials_. (Accepted April 1 2022. To appear.)
