--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -14,3 +14,18 @@
 	year = {2011},
 	pages = {2867--2880}
 }
+
+
+@article{wolf_permutation_2022,
+	title = {A permutation procedure to detect heterogeneous treatment effects in randomized clinical trials while controlling the type {I} error rate},
+	issn = {1740-7745},
+	url = {https://doi.org/10.1177/17407745221095855},
+	doi = {10.1177/17407745221095855},
+	urldate = {2022-05-09},
+	journal = {Clinical Trials},
+	author = {Wolf, Jack M and Koopmeiners, Joseph S and Vock, David M},
+	month = may,
+	year = {2022},
+	note = {Publisher: SAGE Publications},
+	pages = {17407745221095855}
+}
