Bug fixes related to variable names - tunevt() previously errored out if the   outcome was not named "Y" and the treatment   indicator was not "Trt". All functions now   appropriately use the input Y and Trt labels. - Citation update for Wolf et al. 2022 - Version -> 0.0.1.9000

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -23,9 +23,11 @@
 	doi = {10.1177/17407745221095855},
 	urldate = {2022-05-09},
 	journal = {Clinical Trials},
+  volume = {19},
+  number = {5},
+  pages = {512-521},
 	author = {Wolf, Jack M and Koopmeiners, Joseph S and Vock, David M},
 	month = may,
 	year = {2022},
-	note = {Publisher: SAGE Publications},
-	pages = {17407745221095855}
+	note = {Publisher: SAGE Publications}
 }
