Update documentation - Add information about classification trees to   `tunevt()` details - Add reference to Deng and Wolf et al. (2023)

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -29,3 +29,14 @@
 	year = {2022},
 	note = {Publisher: SAGE Publications}
 }
+
+
+@article{deng_practical_2023,
+	title = {Practical guidance on modeling choices for the virtual twins method},
+	doi = {10.1080/10543406.2023.2170404},
+	language = {en},
+	journal = {Journal of Biopharmaceutical Statistics},
+	author = {Deng, Chuyu and Wolf, Jack M and Vock, David M and Carroll, Dana M and Hatsukami, Dorothy K and Leng, Ning and Koopmeiners, Joseph S},
+	month = mar,
+	year = {2023}
+}
