First Vignette Draft - Create articles/tehtuner.Rmd - Modifies example data to increase sample size - Updates tests for new example data

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -38,3 +38,102 @@
 	month = mar,
 	year = {2023}
 }
+
+
+@article{tibshirani_regression_1996,
+	title = {Regression {Shrinkage} and {Selection} via the {Lasso}},
+	volume = {58},
+	issn = {0035-9246},
+	url = {https://www.jstor.org/stable/2346178},
+	number = {1},
+	urldate = {2022-12-07},
+	journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+	author = {Tibshirani, Robert},
+	year = {1996},
+	note = {Publisher: [Royal Statistical Society, Wiley]},
+	pages = {267--288},
+}
+
+
+@article{friedman_multivariate_1991,
+	title = {Multivariate {Adaptive} {Regression} {Splines}},
+	volume = {19},
+	issn = {0090-5364, 2168-8966},
+	url = {https://projecteuclid.org/journals/annals-of-statistics/volume-19/issue-1/Multivariate-Adaptive-Regression-Splines/10.1214/aos/1176347963.full},
+	doi = {10.1214/aos/1176347963},
+	number = {1},
+	urldate = {2021-07-07},
+	journal = {The Annals of Statistics},
+	author = {Friedman, Jerome H.},
+	month = mar,
+	year = {1991},
+	note = {Publisher: Institute of Mathematical Statistics},
+	keywords = {62H30, 62J02, 65D07, 65D10, 65D15, 68T05, 68T10, 90A19, 93C35, 93E11, 93E14, AID, CART, multivariable function approximation, multivariate smoothing, Nonparametric multiple regression, recursive partitioning, splines, statistical learning neural networks},
+	pages = {1--67},
+}
+
+
+@article{breiman_random_2001,
+	title = {Random {Forests}},
+	volume = {45},
+	issn = {1573-0565},
+	url = {https://doi.org/10.1023/A:1010933404324},
+	doi = {10.1023/A:1010933404324},
+	language = {en},
+	number = {1},
+	urldate = {2022-03-07},
+	journal = {Machine Learning},
+	author = {Breiman, Leo},
+	month = oct,
+	year = {2001},
+	pages = {5--32},
+}
+
+
+@article{van_der_laan_super_2007,
+	title = {Super {Learner}},
+	volume = {6},
+	issn = {1544-6115, 2194-6302},
+	url = {https://www-degruyter-com.ezp2.lib.umn.edu/view/journals/sagmb/6/1/article-sagmb.2007.6.1.1309.xml.xml},
+	doi = {10.2202/1544-6115.1309},
+	language = {en},
+	number = {1},
+	urldate = {2021-01-22},
+	journal = {Statistical Applications in Genetics and Molecular Biology},
+	author = {{van der Laan}, Mark J. and Polley, Eric C. and Hubbard, Alan E.},
+	month = sep,
+	year = {2007},
+	note = {Publisher: De Gruyter
+Section: Statistical Applications in Genetics and Molecular Biology},
+}
+
+@book{breiman_classification_2017,
+	address = {Boca Raton},
+	title = {Classification {And} {Regression} {Trees}},
+	isbn = {978-1-315-13947-0},
+	publisher = {Routledge},
+	author = {Breiman, Leo and Friedman, Jerome H. and Olshen, Richard A. and Stone, Charles J.},
+	month = oct,
+	year = {2017},
+	doi = {10.1201/9781315139470},
+}
+
+
+@article{hothorn_unbiased_2006,
+	title = {Unbiased {Recursive} {Partitioning}: {A} {Conditional} {Inference} {Framework}},
+	volume = {15},
+	issn = {1061-8600},
+	shorttitle = {Unbiased {Recursive} {Partitioning}},
+	url = {https://doi.org/10.1198/106186006X133933},
+	doi = {10.1198/106186006X133933},
+	number = {3},
+	urldate = {2021-01-22},
+	journal = {Journal of Computational and Graphical Statistics},
+	author = {Hothorn, Torsten and Hornik, Kurt and Zeileis, Achim},
+	month = sep,
+	year = {2006},
+	keywords = {Multiple testing, Multivariate regression trees, Ordinal regression trees, Permutation tests, Variable selection},
+	pages = {651--674}
+}
+
+
