--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -137,3 +137,37 @@ Section: Statistical Applications in Genetics and Molecular Biology},
 }
 
 
+
+@article{hill_bayesian_2011,
+	title = {Bayesian {Nonparametric} {Modeling} for {Causal} {Inference}},
+	volume = {20},
+	issn = {1061-8600, 1537-2715},
+	url = {http://www.tandfonline.com/doi/abs/10.1198/jcgs.2010.08162},
+	doi = {10.1198/jcgs.2010.08162},
+	language = {en},
+	number = {1},
+	urldate = {2022-10-06},
+	journal = {Journal of Computational and Graphical Statistics},
+	author = {Hill, Jennifer L.},
+	month = jan,
+	year = {2011},
+	pages = {217--240},
+}
+
+
+@book{tibshirani_grf_2022,
+	title = {grf: {Generalized} {Random} {Forests}},
+	url = {https://CRAN.R-project.org/package=grf},
+	author = {Tibshirani, Julie and Athey, Susan and Sverdrup, Erik and Wager, Stefan},
+	year = {2022},
+	annote = {R package version 2.2.1},
+}
+
+
+@book{vieille_avirtualtwins_2018,
+	title = {{aVirtualTwins}: {Adaptation} of {Virtual} {Twins} {Method} from {Jared} {Foster}},
+	url = {https://CRAN.R-project.org/package=aVirtualTwins},
+	author = {Vieille, Francois and Foster, Jared},
+	year = {2018},
+	annote = {R package version 1.0.1},
+}
