Correct grf citation capitalization

--- a/inst/REFERENCES.bib
+++ b/inst/REFERENCES.bib
@@ -156,7 +156,7 @@ Section: Statistical Applications in Genetics and Molecular Biology},
 
 
 @book{tibshirani_grf_2022,
-	title = {grf: {Generalized} {Random} {Forests}},
+	title = {{grf}: {Generalized} {Random} {Forests}},
 	url = {https://CRAN.R-project.org/package=grf},
 	author = {Tibshirani, Julie and Athey, Susan and Sverdrup, Erik and Wager, Stefan},
 	year = {2022},
